# aks-ai-app-sample

./: .env.example  .gitignore  Agent.md  Makefile  Makefile.new  README.md  docker-compose.yml  terraform-plan-summary.md
.github/: copilot-instructions.md
backend/: .dockerignore  Dockerfile  QUICKSTART.md  README.md  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7790b2352a7a_initial_migration_conversations_.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: deps.py
backend/app/api/v1/endpoints/: agents.py  chat.py  health.py  rag.py
backend/app/core/: __init__.py  azure_auth.py  config.py  logging.py  security.py
backend/app/graphs/: __init__.py  agent_graph.py  chat_graph.py  rag_graph.py
backend/app/graphs/tools/: __init__.py
backend/app/models/: database.py  db_engine.py  db_models.py  schemas.py
backend/app/repositories/: __init__.py  base_repository.py  cosmosdb_repository.py  factory.py  postgresql_repository.py
backend/app/services/: agent_service.py  foundry_client.py  mcp_service.py  openai_service.py  search_service.py
backend/app/utils/: helpers.py  tracing.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_chat.py  test_postgresql_repository.py
docs/: FRONTEND_OTEL_TRACING.md  LANGSMITH_OTEL_TRACING.md  W3C_TRACE_CONTEXT_PROPAGATION.md
frontend/: .dockerignore  .env.local.example  .eslintrc.json  .gitignore  Dockerfile  FRONTEND_STATUS.md  (+7 more)
(+126 files in other folders)
